--- a/Python/Docker/python3/Dockerfile
+++ b/Python/Docker/python3/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3
 USER root
 
 RUN apt-get update
-RUN apt-get -y install locales && \
+RUN apt-get install -y locales wget && \
     localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
 ENV LANG ja_JP.UTF-8
 ENV LANGUAGE ja_JP:ja
